wwwroot/css/index.css
/* ... */
main header {
    position: relative;
}

#intro {
    position: relative;
}

@media (min-width:670px) {
    #intro {
        display: -ms-flexbox;
        display: flex;
        -ms-flex-align: center;
        align-items: center;
        height: 600px;
    }
}

@media (min-width:880px) {
    #intro {
        height: 760px;
    }
}

#intro .container-lg {
    padding-top: 70px;
    padding-bottom: 100px;
}

@media (min-width:670px) {
    #intro .container-lg {
        margin-top: -12%;
        padding-top: 0;
        padding-bottom: 0;
    }
}

#intro .announcement {
    display: -ms-inline-flexbox;
    display: inline-flex;
    -ms-flex-align: center;
    align-items: center;
    width: calc(100% + 20px * 2);
    padding: 10px 20px;
    margin: 0 0 30px -20px;
    font-size: 14px;
    line-height: 17px;
    font-weight: 500;
    color: #32325d;
    text-decoration: none;
    background: #fff;
}

#intro .message {
    -ms-flex: 1;
    flex: 1;
    margin: 0 12px;
}

@media (min-width:670px) {
    @supports (width:auto) {
        #intro .announcement {
            width: auto;
        }
    }

    #intro .announcement {
        line-height: 26px;
        margin: 0 0 55px;
        padding: 0 12px 0 5px;
        border-radius: 15px;
    }

    #intro .message {
        margin: 0 7px 0 6px;
    }
}

#intro .announcement .new-pill {
    padding: 0 6px;
    font-size: 12px;
    line-height: 16px;
    font-weight: 600;
    background: #4b69e6;
    text-transform: uppercase;
    border-radius: 10px;
    color: #fff;
}

#intro .announcement:after {
    content: '\27A2';
    font: normal 16px StripeIcons;
    position: relative;
    bottom: 1px;
}

#intro h1 {
    font-size: 32px;
    font-weight: 400;
    color: #fff;
}

@media (min-width:880px) {
    #intro h1 {
        font-size: 40px;
    }
}

#intro p {
    max-width: 500px;
    margin-top: 20px;
    color: #fff;
}

@media (min-width:670px) {
    #intro p {
        max-width: 100%;
    }
}

@media (min-width:880px) {
    #intro p {
        max-width: 50%;
    }
}

#intro ul {
    display: -ms-flexbox;
    display: flex;
    margin-top: 40px;
}

@media (min-width:670px) {
    #intro ul {
        margin-top: 45px;
    }
}

#intro li:first-child a {
    margin-left: 0;
    margin-right: 23px;
    color: #fff;
    background: #3ecf8e;
    text-shadow: 0 1px 3px rgba(36,180,126,.4);
}

#intro li:first-child svg {
    position: relative;
    top: 1px;
    margin-right: 5px;
}

#intro li:last-child {
    display: none;
}

@media (min-width:670px) {
    #intro li:last-child {
        display: block;
    }

        #intro li:last-child a {
            color: #7795f8;
        }
}

.header-image {
    width: 500px; 
    height: 281px;
    margin-bottom: 20px;
}

#photos {
    position: absolute;
    display: -ms-flexbox;
    display: flex;
    width: 1287px;
    left: 50%;
    margin-left: -844px;
    transform-origin: 50% 20%;
}

#mobile-photos {
    margin-top: -60px;
}

@media (max-width:426px) {
    #mobile-photos {
        margin-top: -260px;
    }
}


@media (min-width:880px) {
    #photos {
        width: 829px;
        margin-left: 100px;
        top: 350px;
    }
}

@media (max-width:1025px) {
    .header-image {
        width: 400px; 
        height: 224px;
        margin-bottom: 20px;
    }

    #photos {
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        margin-left: 50px;
        top: 315px;
    }
}

@media (max-width:768px) {
    .header-image {
        width: 100%; 
        margin-bottom: 20px;
        padding: 10px;
    }

    #photos {
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        margin-left: 50px;
        top: 315px;
    }
}

#primary {
    overflow: hidden;
    margin-top: 0;
}

    #primary .heading-icon {
        margin: 0 auto;
    }

    #primary .heading-icon, #secondary .heading-icon {
        display: block;
        width: 66px;
        height: 66px;
        margin-bottom: 30px;
    }


@media (min-width:670px) {
    #primary {
        overflow: hidden;
        margin-top: -120px;
    }
}

#about-us .section-title {
    text-align: center;
}

#about-us .general-link--arrow {
    margin-bottom: 280px;
}

@media (min-width:670px) {
    #about-us .section-title {
        margin: 0 25%;
    }

    #about-us .common-paragraph {
        width: 100%;
        text-align: left;
    }

    #about-us .general-link--arrow {
        margin-bottom: 80px;
    }
}

@media (min-width:880px) {
    #about-us {
        position: relative;
        bottom: 30px;
        display: -ms-flexbox;
        display: flex;
        -ms-flex-direction: column;
        flex-direction: column;
        -ms-flex-pack: center;
        justify-content: center;
        height: 580px;
    }

        #about-us > * {
            -ms-flex: none;
            flex: none;
        }

        #about-us .section-title {
            display: -ms-flexbox;
            display: flex;
            -ms-flex-align: center;
            align-items: center;
            width: 50%;
            margin: 0 0 0 33px;
            padding-right: 33px;
            text-align: right;
        }

        #about-us .heading-icon {
            -ms-flex: none;
            flex: none;
            -ms-flex-order: 1;
            order: 1;
            margin: 0 0 0 25px;
        }

        #about-us .section-title span {
            -ms-flex: 1;
            flex: 1;
        }

        #about-us .general-link--arrow {
            margin-bottom: 0;
        }

    #about-us .common-paragraph {
        width: 50%;
        text-align: right;
    }
}

#about-us .common-paragraph {
    padding-top: 35px;
}

#about-us .general-link {
    display: block;
}

@media (min-width:670px) {
    #about-us .general-link {
        margin-top: 35px;
        border-top: 2px solid #f1f7fb;
    }
}

#meetups {
    position: relative;
    padding-top: 110px;
}
/* ... */

